# mapCrawler

./: .gitignore  .pre-commit-config.yaml  EDA.ipynb  README.md  environment.yml  html.txt  mapcrawler.py  packages.txt  pyproject.toml  requirements.txt  result.csv  soup.txt  soup2.txt  test_output.txt
.devcontainer/: devcontainer.json
pages/: 1_Multi_Select_Search.py
src/map_crawler/: __init__.py  config.py  logger.py  models.py  utils.py
src/map_crawler/backend/: __init__.py  scraper.py  service.py  storage.py
src/map_crawler/frontend/: __init__.py  app.py  components.py
tests/: __init__.py  test_scraper.py  test_utils.py
